--- a/SimpleToDo/Base.lproj/Main.storyboard
+++ b/SimpleToDo/Base.lproj/Main.storyboard
@@ -24,26 +24,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show  Done:" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P6D-NR-3h5">
-                                            <rect key="frame" x="176" y="4" width="41" height="36"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="41" id="25h-cF-pJi"/>
-                                                <constraint firstAttribute="height" constant="36" id="yQQ-CN-jvm"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dfJ-M5-xy4">
-                                            <rect key="frame" x="225" y="6" width="51" height="31"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="31" id="39K-Y2-39O"/>
-                                                <constraint firstAttribute="width" constant="49" id="Hob-c4-0vc"/>
-                                            </constraints>
-                                            <connections>
-                                                <action selector="showCompletedToggled:" destination="BYZ-38-t0r" eventType="valueChanged" id="0h6-YC-7P3"/>
-                                            </connections>
-                                        </switch>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e6m-vS-k5n">
                                             <rect key="frame" x="282" y="7" width="30" height="30"/>
                                             <constraints>
@@ -54,6 +34,9 @@
                                             <state key="normal" title="+">
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
+                                            <connections>
+                                                <action selector="newList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="r7h-9Z-3Tq"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="syf-OK-Uft">
                                             <rect key="frame" x="8" y="4" width="160" height="35"/>
@@ -68,12 +51,8 @@
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="dfJ-M5-xy4" secondAttribute="trailing" constant="46" id="1aa-SU-ggh"/>
-                                        <constraint firstAttribute="centerY" secondItem="P6D-NR-3h5" secondAttribute="centerY" id="ALX-Hz-aEp"/>
                                         <constraint firstAttribute="trailing" secondItem="e6m-vS-k5n" secondAttribute="trailing" constant="8" id="dmE-oy-QvB"/>
-                                        <constraint firstItem="dfJ-M5-xy4" firstAttribute="leading" secondItem="P6D-NR-3h5" secondAttribute="trailing" constant="8" id="ky0-B1-RWQ"/>
                                         <constraint firstAttribute="centerY" secondItem="e6m-vS-k5n" secondAttribute="centerY" id="qpw-ED-efN"/>
-                                        <constraint firstAttribute="centerY" secondItem="dfJ-M5-xy4" secondAttribute="centerY" id="yfy-Dy-3z0"/>
                                     </constraints>
                                 </view>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="nAB-Z7-m6u">
@@ -89,8 +68,34 @@
                                                 <segue destination="Yc6-s4-8dK" kind="presentation" identifier="showAddItemViewController" id="BxO-rL-od2"/>
                                             </connections>
                                         </button>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show  Done:" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P6D-NR-3h5">
+                                            <rect key="frame" x="214" y="4" width="41" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="41" id="25h-cF-pJi"/>
+                                                <constraint firstAttribute="height" constant="36" id="yQQ-CN-jvm"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dfJ-M5-xy4">
+                                            <rect key="frame" x="263" y="6" width="51" height="31"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="31" id="39K-Y2-39O"/>
+                                                <constraint firstAttribute="width" constant="49" id="Hob-c4-0vc"/>
+                                            </constraints>
+                                            <connections>
+                                                <action selector="showCompletedToggled:" destination="BYZ-38-t0r" eventType="valueChanged" id="0h6-YC-7P3"/>
+                                            </connections>
+                                        </switch>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="dfJ-M5-xy4" secondAttribute="trailing" constant="8" id="4vP-No-DYx"/>
+                                        <constraint firstAttribute="centerY" secondItem="P6D-NR-3h5" secondAttribute="centerY" id="6qb-P9-eMR"/>
+                                        <constraint firstItem="dfJ-M5-xy4" firstAttribute="leading" secondItem="P6D-NR-3h5" secondAttribute="trailing" constant="8" id="cGT-iM-RQ1"/>
+                                        <constraint firstAttribute="centerY" secondItem="dfJ-M5-xy4" secondAttribute="centerY" id="gGk-Dr-p6M"/>
+                                    </constraints>
                                 </view>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ToDoCell" id="epa-gq-EHP">
@@ -131,7 +136,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
-                        <outlet property="listNameButton" destination="syf-OK-Uft" id="Ndy-bd-S0X"/>
+                        <outlet property="listNameButton" destination="syf-OK-Uft" id="VMq-fv-2I3"/>
                         <outlet property="showCompletedSwitch" destination="dfJ-M5-xy4" id="LX6-jn-R1y"/>
                         <outlet property="tableView" destination="Qxv-or-oHH" id="YfB-4J-E9a"/>
                     </connections>
@@ -331,6 +336,20 @@
                                     <segue destination="TAX-oA-W52" kind="unwind" unwindAction="unwindFromRemoveCompleted:" id="bzY-fY-WFH"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lJu-kE-ssG">
+                                <rect key="frame" x="124" y="263" width="73" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="E6x-nB-U6a"/>
+                                    <constraint firstAttribute="width" constant="73" id="zz5-UF-7rn"/>
+                                </constraints>
+                                <state key="normal" title="Delete List">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="TAX-oA-W52" kind="unwind" unwindAction="unwindFromSelfDestruct:" id="9FH-cv-VVJ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -340,10 +359,12 @@
                             <constraint firstAttribute="centerX" secondItem="GU7-z3-xFe" secondAttribute="centerX" id="AxP-Td-3ui"/>
                             <constraint firstItem="vgY-I7-LQp" firstAttribute="top" secondItem="dqa-PZ-54R" secondAttribute="bottom" constant="55" id="Nn3-dA-4c5"/>
                             <constraint firstItem="pXW-zT-6Kq" firstAttribute="top" secondItem="GU7-z3-xFe" secondAttribute="bottom" constant="22" id="TDK-3H-E0R"/>
+                            <constraint firstItem="lJu-kE-ssG" firstAttribute="top" secondItem="2sM-0o-0Wv" secondAttribute="bottom" constant="23" id="YXT-s3-jub"/>
                             <constraint firstItem="2sM-0o-0Wv" firstAttribute="top" secondItem="pXW-zT-6Kq" secondAttribute="bottom" constant="24" id="cGH-pz-VYx"/>
                             <constraint firstItem="GU7-z3-xFe" firstAttribute="leading" secondItem="pXW-zT-6Kq" secondAttribute="leading" id="fTO-8m-UyJ"/>
                             <constraint firstAttribute="centerX" secondItem="vgY-I7-LQp" secondAttribute="centerX" id="l3D-Qp-mbB"/>
                             <constraint firstItem="GU7-z3-xFe" firstAttribute="top" secondItem="vgY-I7-LQp" secondAttribute="bottom" constant="8" id="oS3-nX-fsR"/>
+                            <constraint firstAttribute="centerX" secondItem="lJu-kE-ssG" secondAttribute="centerX" id="x87-AK-gPn"/>
                         </constraints>
                     </view>
                     <connections>
